# StartupScout

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __main__.py  main.py  orchestrator.py
src/core/: config.py  logging.py  models.py
src/crawlers/: base.py  betalist_crawler.py  browser.py  f6s_crawler.py  http_client.py  launchingnext_crawler.py  producthunt_crawler.py  saashub_crawler.py  wellfound_crawler.py  yc_crawler.py
src/export/: exporter.py
src/pipeline/: deduplicator.py  enricher.py  normalizer.py  validator.py
